# ttk4145

./: .gitignore  README.md
ex01/: run.sh  sum.c  sum.go  sum.py
ex02/mukrop/: sum.c  sum.go  sum.py  sum2.go
ex02/still/: sum.c  sum.go  sum.py  sum_chan.go  sum_server.go
ex03/: network.go  udp.go
ex06/: ex6.cpp  udptools.cpp
ex07/: exercise7.adb
ex08/: exercise8.adb
project/: CMakeLists.txt  LICENSE  Makefile  README.md  configure
project/elevator/: command.h  concurrentqueue.h  concurrentqueue.test.h  driver.cpp  driver.h  driver.test.h  elevator.cpp  elevator.h  floorset.h  globalstate.h  heartbeat.h  heartbeat.test.h  io.cpp  io.h  requestqueue.cpp  requestqueue.h  restartwrapper.h  restartwrapper.test.h  scheduler.cpp  scheduler.h  serialization.h  serialization.test.h  sessionmanager.cpp  sessionmanager.h  sharedblock.h  sharedblock.test.h  state.h  state.test.h  time.h  udpqueue.h  udptools.cpp  udptools.h  udptools.test.h
project/elevator/internal/: serialization.h
project/src/: UDP.cpp  command.h  concurrentqueue.h  concurrentqueue.test.h  driver.cpp  driver.h  driver.test.h  elevator.cpp  elevator.h  floorset.h  heartbeat.h  heartbeat.test.h  io.c  io.cpp  io.h  main.cpp  restartwrapper.h  restartwrapper.test.h  serialization.h  serialization.test.h  sharedblock.h  sharedblock.test.h  signal.cpp  spinlock.h  state.h  state.test.h  stop.cpp  test.h  udptools.cpp  udptools.h  udptools.test.h
project/src/internal/: serialization.h
project/tools/: main.cpp  signal.cpp  stop.cpp
project/wibble/: raii.h
